java/sdk/resourcemanager/azure-resourcemanager-network/src/test/resources/session-records/NetworkSecurityGroupTests.canCRUDNetworkSecurityGroup.json
{
  "Entries": [
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/javanwmrg13507?api-version=2022-09-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "29",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:09:57 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.resources/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "e5b6fa76-9f68-4f43-9dba-33f58124ca35",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "southcentralus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "233",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:01 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "2e690844-33d0-4dbf-a5f7-a194c4af0f2f",
        "x-ms-ratelimit-remaining-subscription-writes": "1196",
        "x-ms-request-id": "2e690844-33d0-4dbf-a5f7-a194c4af0f2f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101001Z:2e690844-33d0-4dbf-a5f7-a194c4af0f2f"
      },
      "ResponseBody": {
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507",
        "name": "javanwmrg13507",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "southcentralus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg20994?api-version=2023-05-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "39",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:00 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "903d78f8-34b9-489d-b685-11a4379d89b5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "southcentralus",
        "tags": {}
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/1426c578-282a-4341-b60e-bb5bc9274e43?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "360",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:03 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8a49aaa7-3aa1-4072-b4e8-a8f8d4fa0f02",
        "x-ms-client-request-id": "903d78f8-34b9-489d-b685-11a4379d89b5",
        "x-ms-correlation-request-id": "b22a57e7-1750-4f3d-8169-6707e9435879",
        "x-ms-ratelimit-remaining-subscription-writes": "1195",
        "x-ms-request-id": "1426c578-282a-4341-b60e-bb5bc9274e43",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101003Z:b22a57e7-1750-4f3d-8169-6707e9435879"
      },
      "ResponseBody": {
        "name": "asg20994",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg20994",
        "etag": "W/\u0022485767cb-6db5-4efd-9758-d571989e60ed\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operations/1426c578-282a-4341-b60e-bb5bc9274e43?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:03 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "747fd8bc-094a-4927-a550-c58514bed84f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:04 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "22981ec7-2024-4dfb-8118-1b34deff58d2",
        "x-ms-client-request-id": "747fd8bc-094a-4927-a550-c58514bed84f",
        "x-ms-correlation-request-id": "d5c93e1e-c24a-4c9d-8a90-b7702ad4ff8c",
        "x-ms-ratelimit-remaining-subscription-reads": "11997",
        "x-ms-request-id": "84f67f6a-038e-4fc3-8c86-83c1400322db",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101004Z:d5c93e1e-c24a-4c9d-8a90-b7702ad4ff8c"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg20994?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:03 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "b1dc2c98-2931-41cc-946b-645491a7af72",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "361",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:04 GMT",
        "ETag": "W/\u0022e63afe17-0425-4088-aeb6-5ab9ca2b3b58\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8cbdee2e-9bc3-49b3-a314-45a9021f44ac",
        "x-ms-client-request-id": "b1dc2c98-2931-41cc-946b-645491a7af72",
        "x-ms-correlation-request-id": "bd67a52f-d01d-4301-a3e7-1e5b5e3ca521",
        "x-ms-ratelimit-remaining-subscription-reads": "11996",
        "x-ms-request-id": "87eb7152-2c4e-4264-89b9-7b139b8a5a96",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101004Z:bd67a52f-d01d-4301-a3e7-1e5b5e3ca521"
      },
      "ResponseBody": {
        "name": "asg20994",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg20994",
        "etag": "W/\u0022e63afe17-0425-4088-aeb6-5ab9ca2b3b58\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg67338?api-version=2023-05-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "39",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:04 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "297ec765-22bb-4271-870b-c6b91b197660",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "southcentralus",
        "tags": {}
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/b81b8f6e-614e-451d-891a-efd78dcb03c9?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "360",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:06 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ceb9065a-6d3e-44ff-b14c-341abfb0b061",
        "x-ms-client-request-id": "297ec765-22bb-4271-870b-c6b91b197660",
        "x-ms-correlation-request-id": "9de1a3ab-6088-46fc-bdc1-8890fda2c95c",
        "x-ms-ratelimit-remaining-subscription-writes": "1194",
        "x-ms-request-id": "b81b8f6e-614e-451d-891a-efd78dcb03c9",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101006Z:9de1a3ab-6088-46fc-bdc1-8890fda2c95c"
      },
      "ResponseBody": {
        "name": "asg67338",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg67338",
        "etag": "W/\u00220f366659-c806-481d-88fc-5e1c0b1952c2\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operations/b81b8f6e-614e-451d-891a-efd78dcb03c9?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:06 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "9d4e0829-1958-4f72-905e-b430feabacd9",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:07 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6f906099-0f34-44dc-a80c-1b836824218e",
        "x-ms-client-request-id": "9d4e0829-1958-4f72-905e-b430feabacd9",
        "x-ms-correlation-request-id": "2442cb67-6b8e-446c-a3e6-dd16f3d40912",
        "x-ms-ratelimit-remaining-subscription-reads": "11995",
        "x-ms-request-id": "70fd0b7e-d481-4c0f-bd20-fd68ec033292",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101007Z:2442cb67-6b8e-446c-a3e6-dd16f3d40912"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg67338?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:06 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "f9c9c5d6-4ef7-4717-9c95-fcaa7f84a5f0",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "361",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:07 GMT",
        "ETag": "W/\u0022a904d218-b0e8-44f9-afe1-44820039cfc4\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "30dde27d-bb90-4ef7-89ba-2ae96694db74",
        "x-ms-client-request-id": "f9c9c5d6-4ef7-4717-9c95-fcaa7f84a5f0",
        "x-ms-correlation-request-id": "cf0f07d3-002c-4fe8-86d2-4f0fcd6f79bf",
        "x-ms-ratelimit-remaining-subscription-reads": "11994",
        "x-ms-request-id": "92b94262-f735-4d93-9abb-670e6d4bbe35",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101007Z:cf0f07d3-002c-4fe8-86d2-4f0fcd6f79bf"
      },
      "ResponseBody": {
        "name": "asg67338",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg67338",
        "etag": "W/\u0022a904d218-b0e8-44f9-afe1-44820039cfc4\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg72638?api-version=2023-05-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "39",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:06 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "69a46044-3412-4d02-85d0-b967f003712a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "southcentralus",
        "tags": {}
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/bc102585-fbbb-4f0f-a893-fd4ab0f54d34?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "360",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:09 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e7d2aa8a-3e0b-4b14-b0dd-a7bfae41b987",
        "x-ms-client-request-id": "69a46044-3412-4d02-85d0-b967f003712a",
        "x-ms-correlation-request-id": "cdf13ddd-ccb4-40da-a27f-55e99cdfbcec",
        "x-ms-ratelimit-remaining-subscription-writes": "1193",
        "x-ms-request-id": "bc102585-fbbb-4f0f-a893-fd4ab0f54d34",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101009Z:cdf13ddd-ccb4-40da-a27f-55e99cdfbcec"
      },
      "ResponseBody": {
        "name": "asg72638",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg72638",
        "etag": "W/\u00220ec91872-fb0a-4614-9bc3-06345ca768d2\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operations/bc102585-fbbb-4f0f-a893-fd4ab0f54d34?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:09 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "c44229a9-db30-4651-be1d-eba9b8fb94e3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:10 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a9ab8b23-2b8a-4ef0-aa7c-721c8c05505a",
        "x-ms-client-request-id": "c44229a9-db30-4651-be1d-eba9b8fb94e3",
        "x-ms-correlation-request-id": "6c795f02-9353-480e-99bf-907958b726a1",
        "x-ms-ratelimit-remaining-subscription-reads": "11993",
        "x-ms-request-id": "9ca0d1e9-956d-49f6-9c08-3b178db086e9",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101010Z:6c795f02-9353-480e-99bf-907958b726a1"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg72638?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:09 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "5507069a-82ef-4979-a5cb-2df53bfb138b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "361",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:10 GMT",
        "ETag": "W/\u00223f9b0409-d479-491c-adfc-abe1578a43e4\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c9c40d95-70d9-421e-80a4-6cd53e723ca4",
        "x-ms-client-request-id": "5507069a-82ef-4979-a5cb-2df53bfb138b",
        "x-ms-correlation-request-id": "7fb1c913-f8bc-4aca-8cd8-4e3ffb24dd82",
        "x-ms-ratelimit-remaining-subscription-reads": "11992",
        "x-ms-request-id": "b4791c71-bfdd-4ec7-bd1b-a60e78d90179",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101010Z:7fb1c913-f8bc-4aca-8cd8-4e3ffb24dd82"
      },
      "ResponseBody": {
        "name": "asg72638",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg72638",
        "etag": "W/\u00223f9b0409-d479-491c-adfc-abe1578a43e4\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg43748?api-version=2023-05-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "39",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:09 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "0455ae50-0cbd-4ed6-baa3-38bf8f759fa7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "southcentralus",
        "tags": {}
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/af44e6bd-5977-407f-a6e4-f4f7378599ae?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "360",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:11 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8b272040-072e-40c5-b85f-fe86c6e80206",
        "x-ms-client-request-id": "0455ae50-0cbd-4ed6-baa3-38bf8f759fa7",
        "x-ms-correlation-request-id": "1d64fb49-417c-491e-8c71-fde95503b737",
        "x-ms-ratelimit-remaining-subscription-writes": "1192",
        "x-ms-request-id": "af44e6bd-5977-407f-a6e4-f4f7378599ae",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101012Z:1d64fb49-417c-491e-8c71-fde95503b737"
      },
      "ResponseBody": {
        "name": "asg43748",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg43748",
        "etag": "W/\u00224429e3e3-c653-4ad9-9664-77fdcded479a\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operations/af44e6bd-5977-407f-a6e4-f4f7378599ae?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:12 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "e1606089-7200-4c47-8ddd-e9736878b468",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:13 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "4a2e584d-b613-40a9-a921-347f8e6401f0",
        "x-ms-client-request-id": "e1606089-7200-4c47-8ddd-e9736878b468",
        "x-ms-correlation-request-id": "bd639a2a-e0f6-4708-8800-d03b5c27bb1b",
        "x-ms-ratelimit-remaining-subscription-reads": "11991",
        "x-ms-request-id": "681e9a67-fb39-4d49-8978-002196bb28a4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101013Z:bd639a2a-e0f6-4708-8800-d03b5c27bb1b"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg43748?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:12 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "2c78f246-bd20-40ab-af56-f52b3e416cbc",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "361",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:13 GMT",
        "ETag": "W/\u002264749dfa-be30-4769-aefb-8e125380fe62\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "fdafd452-e477-4ea2-affd-85f17ae65ea5",
        "x-ms-client-request-id": "2c78f246-bd20-40ab-af56-f52b3e416cbc",
        "x-ms-correlation-request-id": "03a70d0e-cd43-4432-9d14-2c69582b2394",
        "x-ms-ratelimit-remaining-subscription-reads": "11990",
        "x-ms-request-id": "ea97124c-1292-4c20-972f-c084d9a868ac",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101014Z:03a70d0e-cd43-4432-9d14-2c69582b2394"
      },
      "ResponseBody": {
        "name": "asg43748",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg43748",
        "etag": "W/\u002264749dfa-be30-4769-aefb-8e125380fe62\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280?api-version=2023-05-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "1517",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:13 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "0f7a8ae8-055f-48a5-a84e-6bd23592dd73",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "securityRules": [
            {
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "sourceApplicationSecurityGroups": [],
                "destinationAddressPrefix": "*",
                "destinationApplicationSecurityGroups": [],
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound"
              },
              "name": "rule1"
            },
            {
              "properties": {
                "description": "foo!!",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22-25",
                "sourceApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg20994"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg67338"
                  }
                ],
                "destinationAddressPrefix": "*",
                "destinationApplicationSecurityGroups": [],
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound"
              },
              "name": "rule2"
            },
            {
              "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "sourceApplicationSecurityGroups": [],
                "destinationApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg43748"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg72638"
                  }
                ],
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound"
              },
              "name": "rule3"
            }
          ]
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/9c2f0dd1-d942-4ef9-914c-2fc020eadf79?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "7452",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:15 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ae32a5dd-64c7-4fa0-8d9f-35a0b800b0be",
        "x-ms-client-request-id": "0f7a8ae8-055f-48a5-a84e-6bd23592dd73",
        "x-ms-correlation-request-id": "8a70a77c-f90e-42d2-ac85-16c8eab4301c",
        "x-ms-ratelimit-remaining-subscription-writes": "1191",
        "x-ms-request-id": "9c2f0dd1-d942-4ef9-914c-2fc020eadf79",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101015Z:8a70a77c-f90e-42d2-ac85-16c8eab4301c"
      },
      "ResponseBody": {
        "name": "nsg81280",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280",
        "etag": "W/\u00220ac7ddcb-36c5-4cfd-816b-b140cc1da3b2\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "b141465c-9031-4683-8377-fcd7165e56ee",
          "securityRules": [
            {
              "name": "rule1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule1",
              "etag": "W/\u00220ac7ddcb-36c5-4cfd-816b-b140cc1da3b2\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "rule2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule2",
              "etag": "W/\u00220ac7ddcb-36c5-4cfd-816b-b140cc1da3b2\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "foo!!",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22-25",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": [],
                "sourceApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg20994"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg67338"
                  }
                ]
              }
            },
            {
              "name": "rule3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule3",
              "etag": "W/\u00220ac7ddcb-36c5-4cfd-816b-b140cc1da3b2\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg43748"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg72638"
                  }
                ]
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u00220ac7ddcb-36c5-4cfd-816b-b140cc1da3b2\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u00220ac7ddcb-36c5-4cfd-816b-b140cc1da3b2\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u00220ac7ddcb-36c5-4cfd-816b-b140cc1da3b2\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u00220ac7ddcb-36c5-4cfd-816b-b140cc1da3b2\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u00220ac7ddcb-36c5-4cfd-816b-b140cc1da3b2\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u00220ac7ddcb-36c5-4cfd-816b-b140cc1da3b2\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operations/9c2f0dd1-d942-4ef9-914c-2fc020eadf79?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:15 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "d1a9ff1f-d483-4c28-87fd-25943a6ff5a0",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:16 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "07eddd36-06ac-48c3-ae13-162347c99c55",
        "x-ms-client-request-id": "d1a9ff1f-d483-4c28-87fd-25943a6ff5a0",
        "x-ms-correlation-request-id": "8beba5fa-08bd-402e-9bb9-3b70610deea7",
        "x-ms-ratelimit-remaining-subscription-reads": "11989",
        "x-ms-request-id": "e8b2204c-f34b-43e3-9885-49b4ad9e5aa0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101016Z:8beba5fa-08bd-402e-9bb9-3b70610deea7"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:15 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "5abf2c30-2a30-4060-9c7e-ea704d1b6488",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "7462",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:16 GMT",
        "ETag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "1bfb09c8-7996-4f64-96e8-1e2ba0c8ef2e",
        "x-ms-client-request-id": "5abf2c30-2a30-4060-9c7e-ea704d1b6488",
        "x-ms-correlation-request-id": "2d74691e-fdf9-4546-8a02-4b7c9b6e354c",
        "x-ms-ratelimit-remaining-subscription-reads": "11988",
        "x-ms-request-id": "144b3bf2-5df6-4a74-9ce4-c0f93fe55f4e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101017Z:2d74691e-fdf9-4546-8a02-4b7c9b6e354c"
      },
      "ResponseBody": {
        "name": "nsg81280",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280",
        "etag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "b141465c-9031-4683-8377-fcd7165e56ee",
          "securityRules": [
            {
              "name": "rule1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule1",
              "etag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "rule2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule2",
              "etag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "foo!!",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22-25",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": [],
                "sourceApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg20994"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg67338"
                  }
                ]
              }
            },
            {
              "name": "rule3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule3",
              "etag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg43748"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg72638"
                  }
                ]
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u00220d9e8aa6-2843-422e-be0e-1da936d73964\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66999?api-version=2023-05-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "39",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:16 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "2c392120-abc5-4aa7-9619-7092a1702e03",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "southcentralus",
        "tags": {}
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/18951626-20bf-4174-bbaa-c3e99d337bf2?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "360",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:17 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3514e187-383a-468d-950b-5776f05d6d98",
        "x-ms-client-request-id": "2c392120-abc5-4aa7-9619-7092a1702e03",
        "x-ms-correlation-request-id": "afde6ad9-a80a-463d-8035-d825d9c851ae",
        "x-ms-ratelimit-remaining-subscription-writes": "1190",
        "x-ms-request-id": "18951626-20bf-4174-bbaa-c3e99d337bf2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101018Z:afde6ad9-a80a-463d-8035-d825d9c851ae"
      },
      "ResponseBody": {
        "name": "asg66999",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66999",
        "etag": "W/\u0022834cda98-c5aa-47d8-ba49-6760de034e43\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operations/18951626-20bf-4174-bbaa-c3e99d337bf2?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:18 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "1f49fa48-3713-4e5d-94c1-ee9cc791116f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:19 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "61562c9f-b37c-4fbd-a610-08c3fc76b777",
        "x-ms-client-request-id": "1f49fa48-3713-4e5d-94c1-ee9cc791116f",
        "x-ms-correlation-request-id": "3f322693-fa90-4ad9-a561-7f073bf3d2d3",
        "x-ms-ratelimit-remaining-subscription-reads": "11987",
        "x-ms-request-id": "5a07b3c3-cae8-4565-9370-b3d125316ae1",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101020Z:3f322693-fa90-4ad9-a561-7f073bf3d2d3"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66999?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:19 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "d6154cf2-b174-42fa-8884-c98cf3180c22",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "361",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:20 GMT",
        "ETag": "W/\u0022c48c9a8c-f8c8-460d-9270-2a086786da8c\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "62ac864f-e9e9-4d77-8efc-6fd9ea013198",
        "x-ms-client-request-id": "d6154cf2-b174-42fa-8884-c98cf3180c22",
        "x-ms-correlation-request-id": "70b7edaf-c186-4da6-9328-c93ad785cdb8",
        "x-ms-ratelimit-remaining-subscription-reads": "11986",
        "x-ms-request-id": "b0c6da2d-dfde-4b53-9a33-90e7617b12d7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101020Z:70b7edaf-c186-4da6-9328-c93ad785cdb8"
      },
      "ResponseBody": {
        "name": "asg66999",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66999",
        "etag": "W/\u0022c48c9a8c-f8c8-460d-9270-2a086786da8c\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66671?api-version=2023-05-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "39",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:19 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "b67655cf-2edc-4f17-b535-55957968ccc1",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "southcentralus",
        "tags": {}
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/93d143c8-e624-4238-9abc-07ce5c8a07e4?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "360",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:21 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "073db074-ab0f-4d38-a561-9fb13326a3be",
        "x-ms-client-request-id": "b67655cf-2edc-4f17-b535-55957968ccc1",
        "x-ms-correlation-request-id": "fe8e9ce3-5865-4744-bc1d-4ed3ee26f5fa",
        "x-ms-ratelimit-remaining-subscription-writes": "1189",
        "x-ms-request-id": "93d143c8-e624-4238-9abc-07ce5c8a07e4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101021Z:fe8e9ce3-5865-4744-bc1d-4ed3ee26f5fa"
      },
      "ResponseBody": {
        "name": "asg66671",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66671",
        "etag": "W/\u002298133551-7b9d-4cf3-9475-f1f9bdea82eb\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operations/93d143c8-e624-4238-9abc-07ce5c8a07e4?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:21 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "b1112198-ed73-4e11-9cc8-ce5937112af2",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:22 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "bcff9374-4166-46ad-9d14-7194655ac5eb",
        "x-ms-client-request-id": "b1112198-ed73-4e11-9cc8-ce5937112af2",
        "x-ms-correlation-request-id": "1dc3df08-4e7e-4401-8799-ff08605ca0e4",
        "x-ms-ratelimit-remaining-subscription-reads": "11985",
        "x-ms-request-id": "a4cacec2-0853-436b-ae5b-bafa5c50ee3f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101023Z:1dc3df08-4e7e-4401-8799-ff08605ca0e4"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66671?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:22 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "135fa7e1-35d2-4fbc-b3b8-34187a8a2c46",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "361",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:23 GMT",
        "ETag": "W/\u002229e70d02-ed35-48d9-9151-c16da1e1ecd9\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3390400e-5f33-492a-8d37-d1a0fe8b3940",
        "x-ms-client-request-id": "135fa7e1-35d2-4fbc-b3b8-34187a8a2c46",
        "x-ms-correlation-request-id": "08353bba-8112-4f20-8e0c-fc67b358b18d",
        "x-ms-ratelimit-remaining-subscription-reads": "11984",
        "x-ms-request-id": "95cab36c-9c77-455c-81b9-2be6f0448408",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101023Z:08353bba-8112-4f20-8e0c-fc67b358b18d"
      },
      "ResponseBody": {
        "name": "asg66671",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66671",
        "etag": "W/\u002229e70d02-ed35-48d9-9151-c16da1e1ecd9\u0022",
        "type": "Microsoft.Network/applicationSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280?api-version=2023-05-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "2544",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:22 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "e6a23bae-8afa-4a99-ae83-1643269efd54",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "southcentralus",
        "tags": {},
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280",
        "properties": {
          "securityRules": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule1",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound"
              },
              "name": "rule1",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules"
            },
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule2",
              "properties": {
                "description": "foo!!",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22-25",
                "sourceApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66999"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg20994"
                  }
                ],
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": [],
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound"
              },
              "name": "rule2",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules"
            },
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule3",
              "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": [],
                "destinationApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg72638"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66671"
                  }
                ],
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound"
              },
              "name": "rule3",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules"
            }
          ]
        }
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/b5eb98a3-7d5a-4fe6-91eb-44397ba98992?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "7452",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:23 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "af77858f-f131-40fa-b1f6-7de547f183ea",
        "x-ms-client-request-id": "e6a23bae-8afa-4a99-ae83-1643269efd54",
        "x-ms-correlation-request-id": "0ef1623a-a7eb-4613-8ae6-e662cdfee912",
        "x-ms-ratelimit-remaining-subscription-writes": "1188",
        "x-ms-request-id": "b5eb98a3-7d5a-4fe6-91eb-44397ba98992",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101024Z:0ef1623a-a7eb-4613-8ae6-e662cdfee912"
      },
      "ResponseBody": {
        "name": "nsg81280",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280",
        "etag": "W/\u00229b83b5e4-ae88-4d40-9735-347a516b9612\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "b141465c-9031-4683-8377-fcd7165e56ee",
          "securityRules": [
            {
              "name": "rule1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule1",
              "etag": "W/\u00229b83b5e4-ae88-4d40-9735-347a516b9612\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "rule2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule2",
              "etag": "W/\u00229b83b5e4-ae88-4d40-9735-347a516b9612\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "foo!!",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22-25",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": [],
                "sourceApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66999"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg20994"
                  }
                ]
              }
            },
            {
              "name": "rule3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule3",
              "etag": "W/\u00229b83b5e4-ae88-4d40-9735-347a516b9612\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg72638"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66671"
                  }
                ]
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u00229b83b5e4-ae88-4d40-9735-347a516b9612\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u00229b83b5e4-ae88-4d40-9735-347a516b9612\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u00229b83b5e4-ae88-4d40-9735-347a516b9612\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u00229b83b5e4-ae88-4d40-9735-347a516b9612\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u00229b83b5e4-ae88-4d40-9735-347a516b9612\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u00229b83b5e4-ae88-4d40-9735-347a516b9612\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operations/b5eb98a3-7d5a-4fe6-91eb-44397ba98992?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:24 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "17aacd5b-851c-4986-80b9-5aa968aac6c7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:25 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "544d8ace-f7e6-4eff-8568-40a85b12d160",
        "x-ms-client-request-id": "17aacd5b-851c-4986-80b9-5aa968aac6c7",
        "x-ms-correlation-request-id": "9c59f05e-4487-4c20-9b7d-76f89bd9003b",
        "x-ms-ratelimit-remaining-subscription-reads": "11983",
        "x-ms-request-id": "6ac6304e-529f-4b9b-a585-bbbe7e15b149",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101025Z:9c59f05e-4487-4c20-9b7d-76f89bd9003b"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:24 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "e1d9161c-90dc-485b-804d-db5adcf36846",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "7462",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:25 GMT",
        "ETag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b4affd39-7a58-4566-aa83-c7ec0b6df9ab",
        "x-ms-client-request-id": "e1d9161c-90dc-485b-804d-db5adcf36846",
        "x-ms-correlation-request-id": "6ef2ed9e-29f9-442e-a145-b7ff9da48161",
        "x-ms-ratelimit-remaining-subscription-reads": "11982",
        "x-ms-request-id": "20da59ca-d1c7-473b-a2a7-de08045f63e5",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101026Z:6ef2ed9e-29f9-442e-a145-b7ff9da48161"
      },
      "ResponseBody": {
        "name": "nsg81280",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280",
        "etag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "b141465c-9031-4683-8377-fcd7165e56ee",
          "securityRules": [
            {
              "name": "rule1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule1",
              "etag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "rule2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule2",
              "etag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "foo!!",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22-25",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": [],
                "sourceApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66999"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg20994"
                  }
                ]
              }
            },
            {
              "name": "rule3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule3",
              "etag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": [
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg72638"
                  },
                  {
                    "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/applicationSecurityGroups/asg66671"
                  }
                ]
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u00224635d988-2ec2-4ca2-8a47-8cf413504b80\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280?api-version=2023-05-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "2007",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:25 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "055e69c8-f973-4564-9c3c-bc24ed60b212",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "southcentralus",
        "tags": {},
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280",
        "properties": {
          "securityRules": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule1",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound"
              },
              "name": "rule1",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules"
            },
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule2",
              "properties": {
                "description": "foo!!",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22-25",
                "sourceAddressPrefix": "Internet",
                "sourceApplicationSecurityGroups": [],
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": [],
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound"
              },
              "name": "rule2",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules"
            },
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule3",
              "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": [],
                "destinationAddressPrefix": "Storage.WestUS",
                "destinationApplicationSecurityGroups": [],
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound"
              },
              "name": "rule3",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules"
            }
          ]
        }
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/c08c4aed-084f-4d64-af80-7d04272d664f?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "6836",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:26 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5115e4a1-0357-4698-a690-721250f73123",
        "x-ms-client-request-id": "055e69c8-f973-4564-9c3c-bc24ed60b212",
        "x-ms-correlation-request-id": "819c427e-4657-4105-89c5-b3214c7267fc",
        "x-ms-ratelimit-remaining-subscription-writes": "1187",
        "x-ms-request-id": "c08c4aed-084f-4d64-af80-7d04272d664f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101026Z:819c427e-4657-4105-89c5-b3214c7267fc"
      },
      "ResponseBody": {
        "name": "nsg81280",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280",
        "etag": "W/\u00228348a39d-b321-473b-ae8b-ccf8fc25e167\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "b141465c-9031-4683-8377-fcd7165e56ee",
          "securityRules": [
            {
              "name": "rule1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule1",
              "etag": "W/\u00228348a39d-b321-473b-ae8b-ccf8fc25e167\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "rule2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule2",
              "etag": "W/\u00228348a39d-b321-473b-ae8b-ccf8fc25e167\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "foo!!",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22-25",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "rule3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule3",
              "etag": "W/\u00228348a39d-b321-473b-ae8b-ccf8fc25e167\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Storage.WestUS",
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u00228348a39d-b321-473b-ae8b-ccf8fc25e167\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u00228348a39d-b321-473b-ae8b-ccf8fc25e167\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u00228348a39d-b321-473b-ae8b-ccf8fc25e167\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u00228348a39d-b321-473b-ae8b-ccf8fc25e167\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u00228348a39d-b321-473b-ae8b-ccf8fc25e167\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u00228348a39d-b321-473b-ae8b-ccf8fc25e167\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operations/c08c4aed-084f-4d64-af80-7d04272d664f?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:26 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "45afd409-1af1-4131-bd37-e29eeb76ac8a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:27 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d24396ce-9978-45d4-af71-995b59ea705e",
        "x-ms-client-request-id": "45afd409-1af1-4131-bd37-e29eeb76ac8a",
        "x-ms-correlation-request-id": "680beb3c-3dc8-4db3-bf76-fa6d18cb9222",
        "x-ms-ratelimit-remaining-subscription-reads": "11981",
        "x-ms-request-id": "74408b87-b9a6-489f-9ebe-02b670dad737",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101028Z:680beb3c-3dc8-4db3-bf76-fa6d18cb9222"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:27 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "6f74efb4-bffa-4bf8-bc26-c03af58be719",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "6846",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:28 GMT",
        "ETag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "9a5dfb95-b1dd-45a7-b030-96546d3d05ad",
        "x-ms-client-request-id": "6f74efb4-bffa-4bf8-bc26-c03af58be719",
        "x-ms-correlation-request-id": "fe2d32fd-9e9e-4c8f-a017-5f7fe54171fa",
        "x-ms-ratelimit-remaining-subscription-reads": "11980",
        "x-ms-request-id": "68d819ae-6aef-49b3-be87-d66b07d2ff9a",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101028Z:fe2d32fd-9e9e-4c8f-a017-5f7fe54171fa"
      },
      "ResponseBody": {
        "name": "nsg81280",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280",
        "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "b141465c-9031-4683-8377-fcd7165e56ee",
          "securityRules": [
            {
              "name": "rule1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule1",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "rule2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule2",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "foo!!",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22-25",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "rule3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule3",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Storage.WestUS",
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:27 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "0d8c31d6-7d88-4e25-b1fd-ff0c66479949",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "6846",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:28 GMT",
        "ETag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "187861ce-d454-4c49-88a0-5e9c44104e30",
        "x-ms-client-request-id": "0d8c31d6-7d88-4e25-b1fd-ff0c66479949",
        "x-ms-correlation-request-id": "32e1efeb-75f4-4efe-a0a9-5d71c7117f60",
        "x-ms-ratelimit-remaining-subscription-reads": "11979",
        "x-ms-request-id": "ee5339d5-c2d4-48f8-b00f-c99856ef8cda",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101029Z:32e1efeb-75f4-4efe-a0a9-5d71c7117f60"
      },
      "ResponseBody": {
        "name": "nsg81280",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280",
        "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "southcentralus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "b141465c-9031-4683-8377-fcd7165e56ee",
          "securityRules": [
            {
              "name": "rule1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule1",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "rule2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule2",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "foo!!",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22-25",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "rule3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/securityRules/rule3",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Storage.WestUS",
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u002256cb2a18-b13c-4f78-8288-ed1997fe8d86\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/javanwmrg13507/providers/Microsoft.Network/networkSecurityGroups/nsg81280?api-version=2023-05-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:28 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "0b0027dc-bd6a-4272-9129-8433277fb46e",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/a332dd80-cd67-40f8-a534-5c10136e8ec8?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Thu, 31 Aug 2023 10:10:29 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operationResults/a332dd80-cd67-40f8-a534-5c10136e8ec8?api-version=2023-05-01",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5ec5e6aa-2ed0-48bd-a0d2-ee7ac6ec9b2b",
        "x-ms-client-request-id": "0b0027dc-bd6a-4272-9129-8433277fb46e",
        "x-ms-correlation-request-id": "6edeed0e-3482-4c9e-99d8-40d837a5705b",
        "x-ms-ratelimit-remaining-subscription-deletes": "14999",
        "x-ms-request-id": "a332dd80-cd67-40f8-a534-5c10136e8ec8",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101030Z:6edeed0e-3482-4c9e-99d8-40d837a5705b"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operations/a332dd80-cd67-40f8-a534-5c10136e8ec8?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:30 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "d85a12a2-803e-4b93-be39-9ac10c948828",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:30 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7144a4db-7600-4841-baed-5e1d1684f4ca",
        "x-ms-client-request-id": "d85a12a2-803e-4b93-be39-9ac10c948828",
        "x-ms-correlation-request-id": "0e35dbf7-4241-4cd2-b9c9-c016a2185f16",
        "x-ms-ratelimit-remaining-subscription-reads": "11978",
        "x-ms-request-id": "40ca5d1b-e892-48a3-a3fd-79286d498fe6",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101031Z:0e35dbf7-4241-4cd2-b9c9-c016a2185f16"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/southcentralus/operationResults/a332dd80-cd67-40f8-a534-5c10136e8ec8?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 31 Aug 2023 10:10:30 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "d4d1671d-a2a1-428a-a37f-9540334d19a7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 204,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operations/a332dd80-cd67-40f8-a534-5c10136e8ec8?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 31 Aug 2023 10:10:31 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/southcentralus/operationResults/a332dd80-cd67-40f8-a534-5c10136e8ec8?api-version=2023-05-01",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5ec5e6aa-2ed0-48bd-a0d2-ee7ac6ec9b2b",
        "x-ms-client-request-id": "0b0027dc-bd6a-4272-9129-8433277fb46e",
        "x-ms-correlation-request-id": "6edeed0e-3482-4c9e-99d8-40d837a5705b",
        "x-ms-ratelimit-remaining-subscription-reads": "11977",
        "x-ms-request-id": "a332dd80-cd67-40f8-a534-5c10136e8ec8",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101031Z:7540493e-1010-4d09-9704-6f1946f2b24d"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/javanwmrg13507?api-version=2022-09-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Thu, 31 Aug 2023 10:10:30 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.resources/2.31.0-beta.1 (17.0.7; Windows 11; 10.0)",
        "x-ms-client-request-id": "1fdc2e04-d142-41e8-93e5-823bab774c25",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Thu, 31 Aug 2023 10:10:34 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/operationresults/eyJqb2JJZCI6IlJFU09VUkNFR1JPVVBERUxFVElPTkpPQi1KQVZBTldNUkcxMzUwNy1TT1VUSENFTlRSQUxVUyIsImpvYkxvY2F0aW9uIjoic291dGhjZW50cmFsdXMifQ?api-version=2022-09-01",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "97b50ab0-3aaa-4c0c-b939-d22824d84ebc",
        "x-ms-ratelimit-remaining-subscription-deletes": "14998",
        "x-ms-request-id": "97b50ab0-3aaa-4c0c-b939-d22824d84ebc",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230831T101034Z:97b50ab0-3aaa-4c0c-b939-d22824d84ebc"
      },
      "ResponseBody": null
    }
  ],
  "Variables": {
    "0": "javanwmrg13507",
    "1": "asg20994",
    "2": "asg67338",
    "3": "asg72638",
    "4": "asg43748",
    "5": "asg66999",
    "6": "asg66671",
    "7": "nsg81280"
  }
}
